<resources>
    <string name="app_name">Desafio Conta Corrente</string>
    <string name="title_activity_navegation">NavegationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_statement">Statement</string>
    <string name="menu_transfer">Transfer</string>
    <string name="menu_Exit">Exit</string>
    <string name="invalid">Email ou senha Inválidos</string>
    <string name="noConnection">Sem Conexão</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="menu_home">Minha Conta</string>
    <string name="dialog_exit">Sair</string>
    <string name="dialog_yes">Sim</string>
    <string name="dialog_no">Não</string>
    <string name="exit_message">Deseja realmente sair?</string>
    <string name="title_home">Minha Conta</string>
    <string name="error_transfer">Saldo insuficiente ou email inválido</string>
    <string name="noConnection_transfer">Sem conexão para transferir</string>
    <string name="empty_fields">Os campos não podem ficar vazios</string>
    <string name="error_update">Erro ao atualizar os dados</string>
    <string name="error_onTransfer">Erro ao transferir</string>
    <string name="error_statement">Erro ao carregar o extrato.</string>
    <string name="login_or_password__incorrect">Login ou senha inválido</string>
    <string name="transfer">Transfer</string>
    <string name="enter_transfer_amount">Coloque o valor que deseja trnsferir</string>
    <string name="exit_button">Sair</string>
    <string name="transfer_button">Transferência</string>
    <string name="statement_button">Extrato</string>
    <string name="balance_hint">Balance</string>
    <string name="name_hint">Name</string>
    <string name="transfer_title">Transferência</string>
</resources>
