<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_statement"
            android:icon="@drawable/ic_statement"
            android:checkable="false"
            android:title="@string/menu_statement" />
        <item
            android:id="@+id/nav_transfer"
            android:icon="@drawable/ic_transfer_2"
            android:checkable="false"
            android:title="@string/menu_transfer" />
        <item
            android:id="@+id/nav_exit"
            android:checkable="false"
            android:title="@string/menu_Exit" />

    </group>

</menu>
