<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.desafiocontacorrente.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_transfer"
        android:name="com.example.desafiocontacorrente.view.TransferFragment"
        android:label="@string/menu_transfer"
        tools:layout="@layout/fragment_transfer" />

    <fragment
        android:id="@+id/nav_statement"
        android:name="com.example.desafiocontacorrente.view.BankStatementFragment"
        android:label="@string/menu_statement"
        tools:layout="@layout/fragment_bank_statement" />

</navigation>